2007-12-15 Steven Borley
 * Added automake warning and output verbosity to autogen.sh

2007-12-14  Steven Borley
 * Added missing .cvsignore file to the tests directories and some
   devices directories, and updated for change from makeidx to ngmakeidx

2007-12-13 Steven Borley
 * Fixed(?) missing files error when autogen.sh is run (with no adms)
  - configure.in:  removed adms directors from AC_CONFIG_FILES list
 * Fixed inclusion of termcap header
  - configure.in:  add check for <termcap.h> to <ncurses/termcap.h>
  - frontend/terminal.c: select either <termcap.h> or <ncurses/termcap.h>

2007-12-09 Dietmar Warning
 * src/frontend/numparam/xpression.c: placeholder for agauss (y=nominal_value)
 * src/spicelib/parser/inpdomod.c: if no bsim3 version given then use 3.30

2007-12-09 Holger Vogt
 * src/frontend/wdisp/windisp.c: better prototypes and some cosmetics
 * src/frontend/inpcom.c: change local index to ind to prevent conflict with index function

2007-12-06 Holger Vogt
 * src/frontend/wdisp/windisp.c: show coordinates and gradients, zooming

2007-12-02 Dietmar Warning
 * src/spicelib/devices/bsimX: div. unused variables and prototypes
 * src/frontend/inpcom.c, inp.c: fix prototype of dirname if not available
 * src/frontend/dotcards.c, src/misc/string.c: strip WhiteSpaces inside parens of dot cards
 * src/frontend/display.c: no WINX_DiagramReady parameter

2007-11-28 Dietmar Warning
 * configure.in: memory display independent from ftime under windows
 * src/frontend/numparam/xpression.c: fix the arg order for pow
 * src/frontend/wdisp/windisp.c, wprint.c: Prototypes and C comments
 * src/frontend/com_hardcopy.c, resource.c, terminal.c: prevent ext. warnings
 * src/frontend/inpcom.h: move arrays to the files there are needed
 * src/frontend/inpcom.c, inp.c: prototypes for dirname and asprintf
 * src/spicelib/parser/ifnewuid.c, inperror.c: prototype for asprintf
 * src/misc/ivars.c: prototype for asprintf
 * src/misc/util.c: better macro request to HAVE_DIRNAME